*SVN*

* Update Prototype to 1.6.0 and script.aculo.us to 1.8.0.  [sam, madrobby]

* Expose the cookie jar as a helper method (before the view would just get the raw cookie hash) [DHH]

* Integration tests: get_ and post_via_redirect take a headers hash.  #9130 [simonjefford]

* Simplfy #view_paths implementation.  ActionView templates get the exact object, not a dup.  [Rick]

* Update tests for ActiveSupport's JSON escaping change.  [rick]

* FormHelper's auto_index should use #to_param instead of #id_before_type_cast.  Closes #9994 [mattly]

* Doc typo fixes for ActiveRecordHelper. Closes #9973 [mikong]

* Make example parameters in restful routing docs idiomatic. Closes #9993 [danger]

* Make documentation comment for mime responders match documentation example.  Closes #9357 [yon]

* Introduce a new test case class for functional tests.  ActionController::TestCase. [Koz]

* Fix incorrect path in helper rdoc. Closes #9926 [viktor tron]

* Partials also set 'object' to the default partial variable.  #8823 [Nick Retallack, Jeremy Kemper]

* Request profiler.  [Jeremy Kemper]
    $ cat login_session.rb
    get_with_redirect '/'
    say "GET / => #{path}"
    post_with_redirect '/sessions', :username => 'john', :password => 'doe'
    say "POST /sessions => #{path}"
    $ ./script/performance/request -n 10 login_session.rb

* Disabled checkboxes don't submit a form value.  #9301 [vladr, robinjfisher]

* Added tests for options to ActiveRecordHelper#form. Closes #7213 [richcollins, mikong, mislav]

* Changed before_filter halting to happen automatically on render or redirect but no longer on simply returning false [DHH]

* Ensure that cookies handle array values correctly.  Closes #9937 [queso]

* Make sure resource routes don't clash with internal helpers like javascript_path, image_path etc.  #9928 [gbuesing]

* caches_page uses a single after_filter instead of one per action.  #9891 [lifofifo]
